--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-flask==3.1.2
-tensorflow-cpu==2.20.0
-mediapipe==0.10.14
-opencv-python==4.12.0.88
-numpy==1.26.4
-scipy==1.16.1
-pillow==11.3.0
-matplotlib==3.10.5
-keras==3.3.3
-h5py==3.14.0
-requests==2.32.4
-absl-py==2.1.0
-protobuf==4.25.3
-gunicorn==22.0.0
+flask
+tensorflow-cpu
+mediapipe
+opencv-python
+numpy
+scipy
+pillow
+matplotlib
+keras
+h5py
+requests
+absl-py
+protobuf
+gunicorn
